# mendelian-inheritance

./: .gitignore  CHANGELOG.md  LICENSE  MendelInheritance.hs  README.md  mendelian-inheritance.cabal
dist-newstyle/cache/: compiler  config
docs/: documentation.md
src/: Alternative.hs  MendelInheritance.hs  PunnettGloss.hs  WithoutTraitStrings.hs
src/MendelInheritance/: Probability.hs  PunnettGloss.hs
test/: Main.hs  sampleSolution.hs  tempCodeRunnerFile.hs
