cabal-version:      3.0

name:               mendelian-inheritance

version:            0.1.0.0

license:            BSD-3-Clause

license-file:       LICENSE

author:             froggyriia

maintainer:         v.gorbacheva@innopolis.university

build-type:         Simple

extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  MendelInheritance, MendelInheritance.PunnettGloss, MendelInheritance.Probability

    build-depends:    containers ^>=0.6.7, base ^>=4.18.3.0, gloss

    hs-source-dirs:   src

    default-language: Haskell2010

test-suite mendelian-inheritance-test
    import:           warnings

    default-language: Haskell2010

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    build-depends:
        base ^>=4.18.3.0,
        HUnit,
        containers ^>=0.6.7,
        mendelian-inheritance,
        gloss
